2006-03-05 Braden McDaniel  <braden@endoframe.com>

	Fixed to avoid scanner assertion when parsing X3D VRML.

	* src/libopenvrml/openvrml/Vrml97Parser.g
	(Vrml97Scanner::nextToken()): Only set the token type to ID after
	other alternatives have been exhausted.
	* tests/Makefile.am
	(check_PROGRAMS): Removed "parse"; added "parse-vrml97" and
	"parse-x3dvrml".
	(parse_SOURCES): Removed.
	(parse_LDADD): Removed.
	(parse_vrml97_SOURCES): Added.
	(parse_vrml97_LDADD): Added.
	(parse_x3dvrml_SOURCES): Added.
	(parse_x3dvrml_LDADD): Added.
	* tests/parse.cpp: Removed file.  Replaced by parse_vrml97.cpp.
	* tests/parse_vrml97.cpp: Added file.  VRML97 parser driver for
	the test suite.
	* tests/parse_x3dvrml.cpp: Added file.  X3D VRML parser driver for
	the test suite.
	* tests/testsuite.at: Changed references to "parse" executable to
	"parse-vrml97".  Added minimal X3D VRML world test.

2006-03-04 Braden McDaniel  <braden@endoframe.com>

	Fixed deadlock when
	externproto_node_class::clear_externproto_node_types is called
	during a call to externproto_node_type::do_create_node.

	* src/libopenvrml/openvrml/browser.cpp
	(externproto_node_class): Granted friendship to
	externproto_node_type; removed externproto_node_types_cleared
	accessor; override node_class::do_shutdown.
	(externproto_node_class::~externproto_node_class()): Moved join to
	load_proto_thread to externproto_node_class::do_shutdown.
	(externproto_node_class::externproto_node_types_cleared() const):
	Lock externproto_node_types_cleared_mutex_.
	(externproto_node_class::do_shutdown(double)): Join
	load_proto_thread_.
	(externproto_node_type::do_create_node(const
	boost::shared_ptr<openvrml::scope> &, const
	openvrml::initial_value_map &) const): Lock
	externproto_node_class::mutex_ to avoid a race condition when
	externproto_node_class::clear_externproto_node_types is called.
	(shutdown_node_class): Added function object; used by
	openvrml::browser::node_class_map::shutdown.